--- a/Corona Semtiment Analysis using simpleRNN.ipynb
+++ b/Corona Semtiment Analysis using simpleRNN.ipynb
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('train.csv')\n",
+    "df=pd.read_csv('dataset.csv')\n",
     "df=df.dropna()\n",
     "df.head(10)"
    ]
@@ -534,17 +534,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "234/234 - 6s - loss: 0.4107 - accuracy: 0.8063 - 6s/epoch - 26ms/step\n",
+      "234/234 - 6s - loss: 0.4168 - accuracy: 0.8059 - 6s/epoch - 27ms/step\n",
       "Epoch 2/3\n",
-      "234/234 - 4s - loss: 0.2270 - accuracy: 0.9204 - 4s/epoch - 19ms/step\n",
+      "234/234 - 5s - loss: 0.2328 - accuracy: 0.9179 - 5s/epoch - 20ms/step\n",
       "Epoch 3/3\n",
-      "234/234 - 4s - loss: 0.1803 - accuracy: 0.9425 - 4s/epoch - 19ms/step\n"
+      "234/234 - 5s - loss: 0.1827 - accuracy: 0.9441 - 5s/epoch - 20ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1c4b8ff0a00>"
+       "<keras.callbacks.History at 0x23e8db968f0>"
       ]
      },
      "execution_count": 12,
@@ -567,13 +567,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59/59 [==============================] - 1s 7ms/step - loss: 0.2496 - accuracy: 0.8854\n"
+      "59/59 [==============================] - 1s 7ms/step - loss: 0.2760 - accuracy: 0.8866\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.2496286779642105, 0.8854262232780457]"
+       "[0.2759806215763092, 0.8866483569145203]"
       ]
      },
      "execution_count": 13,
@@ -594,6 +594,14 @@
    "source": [
     "model.save('SimpleRNN.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aed4f80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
