--- a/Corona Semtiment Analysis using simpleRNN.ipynb
+++ b/Corona Semtiment Analysis using simpleRNN.ipynb
@@ -534,17 +534,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "234/234 - 6s - loss: 0.4168 - accuracy: 0.8059 - 6s/epoch - 27ms/step\n",
+      "234/234 - 13s - loss: 0.4232 - accuracy: 0.8054 - 13s/epoch - 57ms/step\n",
       "Epoch 2/3\n",
-      "234/234 - 5s - loss: 0.2328 - accuracy: 0.9179 - 5s/epoch - 20ms/step\n",
+      "234/234 - 8s - loss: 0.2257 - accuracy: 0.9209 - 8s/epoch - 34ms/step\n",
       "Epoch 3/3\n",
-      "234/234 - 5s - loss: 0.1827 - accuracy: 0.9441 - 5s/epoch - 20ms/step\n"
+      "234/234 - 8s - loss: 0.1770 - accuracy: 0.9435 - 8s/epoch - 33ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x23e8db968f0>"
+       "<keras.callbacks.History at 0x230541da590>"
       ]
      },
      "execution_count": 12,
@@ -567,13 +567,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59/59 [==============================] - 1s 7ms/step - loss: 0.2760 - accuracy: 0.8866\n"
+      "59/59 [==============================] - 1s 10ms/step - loss: 0.2369 - accuracy: 0.9062\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.2759806215763092, 0.8866483569145203]"
+       "[0.23687753081321716, 0.9062022566795349]"
       ]
      },
      "execution_count": 13,
@@ -592,13 +592,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('SimpleRNN.h5')"
+    "# model.save('SimpleRNN.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "67e45744-598c-42c5-8fa2-5e09f76c784b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "   0  0  0 57]]\n",
+      "1/1 - 0s - 31ms/epoch - 31ms/step\n",
+      "0\n",
+      "Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "# twt = [\"Hes just not that into you\"]\n",
+    "twt = [\"sick\"]\n",
+    "# twt = [\"interesting.\"]\n",
+    "twt = tokenizer.texts_to_sequences(twt)\n",
+    "twt = pad_sequences(twt, maxlen=100, dtype='int32', value=0)\n",
+    "print(twt)\n",
+    "sentiment = model.predict(twt,batch_size=56,verbose=2)[0]\n",
+    "print(np.argmax(sentiment))\n",
+    "if(np.argmax(sentiment) == 0):\n",
+    "    print(\"Negative\")\n",
+    "elif(np.argmax(sentiment) == 1):\n",
+    "    print(\"Positive\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aed4f80",
+   "id": "30f443cd-b097-44ba-88ba-5cbeb60890d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3b6eced-f87c-4349-a140-17bf8e2b45f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -620,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
